# MayuriBot

./: README.md  __点我运行__.cmd  main.py  pyproject.toml  setting.yml
data_tl_game/player/1253165119/: chr_b5rKr5rKr.json  chr_b5rKr5rKr_adv.json  chr_b5rKr5rKr_crd.json  chr_b5rKr5rKr_weapon.csv  chr_b6I6r5aic.json  chr_b6I6r5aic_adv.json  chr_b6I6r5aic_buff.csv  chr_b6I6r5aic_crd.json  chr_b6I6r5aic_weapon.csv  plr_1253165119.csv
docs/: 时间线人物卡 v4.0.xlsx
modules/: Battle.py  Buff.py  CharacterCreate.py  CharacterManage.py  DamageReduction.py  Examination.py  LevelUp.py  Negotiation.py  PreparationCheck.py  Record.py  Target.py  WeaponCreate.py  WeaponManage.py
modules/tools/: game_data.py  regex.py  toolkits.py
